# rules_gomobile

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  apple.bzl  common.bzl  constraints.bzl  extract.bzl  go.bzl  go.mod  go.sum  gobind.bzl  gobind_library.bzl  gobind_wrapper.go  java.bzl  objc.bzl  repositories.bzl  utils.bzl
examples/helloworld/: AndroidManifest.xml.old  BUILD  BUILD.bazel  helloworld.go
examples/helloworld/android/: AndroidManifest.xml  BUILD
examples/helloworld/android/java/co/znly/rules_gomobile/sampleapp/: MainActivity.java
examples/helloworld/android/res/layout/: activity_main.xml
examples/helloworld/android/res/values/: strings.xml
examples/helloworld/go/: BUILD  helloworld.go  util.go
examples/helloworld/ios/: BUILD
examples/helloworld/java/co/znly/rules_gomobile/sampleapp/: MainActivity.java
examples/helloworld/res/values/: strings.xml
gomobile/bind/: BUILD.bazel  doc.go
gomobile/bind.old/java/: BUILD.bazel  seq_android.c.support
gomobile/bind.old/objc/: BUILD.bazel
gomobile/bind/java/: BUILD.bazel  context_android.go
gomobile/bind/objc/: BUILD.bazel
gomobile/bind/seq/: BUILD.bazel
gomobile/mobileinit/: BUILD.bazel
gomobile/seq/: BUILD.bazel
platform/: BUILD.bazel  ios.bzl  platforms.bzl
rule_mobile/: common.bzl  gobind.bzl  gobind_library.bzl  gobind_wrapper.go  java.bzl  objc.bzl  providers.bzl
tools/: BUILD  bazel.rc  defs.bzl
tools/platform/: transitions.bzl
tools/rule_mobile/: BUILD  common.bzl  gobind.bzl  gobind_library.bzl  gobind_wrapper.go
