load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "gobind_wrapper",
    srcs = ["gobind_wrapper.go"],
)

# Reference:
#   https://github.com/bazelbuild/rules_go
#   https://github.com/bazelbuild/bazel-gazelle
#
# If you want to add repos like `github.com/pkg/errors`, command:
#
# Add require in `go.sum`, and run:
#   bazel run :gazelle -- update-repos -from_file=go.mod -to_macro=repositories.bzl%go_repositories
# It will update `repositories.bzl`
#
# gazelle:prefix github.com/znly/rules_gomobile
gazelle(name = "gazelle")

alias(
    name = "gomobile",
    actual = "@org_golang_x_mobile//cmd/gomobile:gomobile",
)

alias(
    name = "gobind",
    actual = "@org_golang_x_mobile//cmd/gobind:gobind",
)

go_binary(
    name = "go_sdk_binary",
    embedsrcs = ["@go_sdk//:srcs"],
    pure = "off",
    cgo = True,
)
