load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# Reference:
#   https://github.com/bazelbuild/rules_go
#   https://github.com/bazelbuild/bazel-gazelle
#
# If you want to add repos like `github.com/pkg/errors`, command:
#
# Add require in `go.sum`, and run:
#   bazel run :gazelle -- update-repos -from_file=go.mod -to_macro=repositories.bzl%go_repositories
# It will update `repositories.bzl`
#
# gazelle:prefix github.com/znly/rules_gomobile
gazelle(name = "gazelle")
