load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# Reference:
#   https://github.com/bazelbuild/rules_go
#   https://github.com/bazelbuild/bazel-gazelle
#
# If you want to add repos like `github.com/pkg/errors`, command:
#
# Add require in `go.sum`, and run:
#   bazel run :gazelle -- update-repos -from_file=go.mod -to_macro=repositories.bzl%go_repositories
# It will update `repositories.bzl`
#
# gazelle:prefix github.com/znly/rules_gomobile
gazelle(name = "gazelle")


# Add go_repository:
# go_repository(
#     name = "org_golang_x_mobile",
#     importpath = "golang.org/x/mobile",
#     sum = "h1:CyFUjc175y/mbMjxe+WdqI72jguLyjQChKCDe9mfTvg=",
#     version = "v0.0.0-20210924032853-1c027f395ef7",
#     patches = [
#         "@bolitt_rules_gomobile//third_party/org_golang_x_mobile:all.patch",
#     ],
# )
alias(
    name = "x_mobile_patch",
    actual = "//third_party/org_golang_x_mobile:all.patch",
)