# See all details:
# bazel query --output build //examples/helloworld/...

load("//:gobind.bzl", "gobind")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_static_framework")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
# load("@rules_jvm_external//:defs.bzl", "artifact")
load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["helloworld.go"],
    importpath = "github.com/znly/rules_gomobile/examples/helloworld",
)

gobind(
    name = "HelloLib",
    java_package = "co.znly",
    deps = [":go_default_library"],
)

android_binary(
    name = "sampleapp",
    srcs = glob([
        "java/**/*.java",
    ]),
    custom_package = "co.znly.rules_gomobile.sampleapp",
    manifest = "AndroidManifest.xml",
    multidex = "native",
    resource_files = glob(["res/**"]),
    deps = [
        ":HelloLib.android_library",
        gmaven_artifact("com.android.support:appcompat-v7:aar:27.1.1"),
        gmaven_artifact("com.android.support:support-compat:aar:27.1.1"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.2"),
    ],

)

# ios_static_framework(
#     name = "HelloLib.framework",
#     hdrs = [":HelloLib.objc.hdrs"],
#     bundle_name = "HelloLib",
#     families = [
#         "iphone",
#         "ipad",
#     ],
#     minimum_os_version = "10.0",
#     deps = [":HelloLib.objc"],
# )
