load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mobileinit.go",
    ] + select({
        "@co_znly_rules_gomobile//platform:android": [
            "mobileinit_android.go",
        ],
        "@co_znly_rules_gomobile//platform:ios": [
            "mobileinit_ios.go",
        ],
        "//conditions:default": [],
    }),
    cgo = True,
    clinkopts = select({
        "@co_znly_rules_gomobile//platform:android": [
            "-landroid -llog",
        ],
        "//conditions:default": [],
    }),
    importpath = "golang.org/x/mobile/internal/mobileinit",
    visibility = ["//gomobile:__subpackages__"],
)
