load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mobileinit.go",
        "ctx_android.go",
        "mobileinit_android.go",
        "mobileinit_ios.go",
    ],
    cgo = True,
    clinkopts = select({
        "@co_znly_rules_gomobile//platform:android": [
            "-llog",
            "-landroid",
            "-ldl",
        ],
        "//conditions:default": [],
    }),
    importpath = "golang.org/x/mobile/internal/mobileinit",
    visibility = ["//gomobile:__subpackages__"],
)
        # clinkopts = clinkopts + [
        #     "-llog",
        #     "-ldl",
        #     "-lc++_static",
        #     "-lc++abi",
        #     "-landroid_support"
        # ] + select({
        #     "@io_bazel_rules_go//go/platform:android_arm": [
        #         "-lunwind",
        #     ],
        #     "//conditions:default": [],
        # }),
