load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "context_android.go",
        "context_android.c",
        "seq.h",
    ],
    cgo = True,
    clinkopts = [
        "-llog",
        "-ldl",
    ],
    data = glob(["seq.h", "*.java", "*.support"]),
    importpath = "golang.org/x/mobile/bind/java",
    visibility = ["//visibility:public"],
    deps = [
        "@co_znly_rules_gomobile//gomobile/mobileinit:go_default_library",
    ],
)

go_library(
    name = "support_library",
    srcs = [
        "doc.go",
    ],
    data = glob(["seq.h", "*.java", "*.support"]),
    importpath = "golang.org/x/mobile/bind/java",
    visibility = ["//visibility:public"],
    deps = [
        "@co_znly_rules_gomobile//gomobile/mobileinit:go_default_library",
    ],
)
