load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "context_android.go",
        "context_android.c",
        "seq_android.h",
    ],
    cgo = True,
    clinkopts = [
        "-llog",
        "-ldl",
    ],
    data = glob(["*.java", "*.support"]),
    importpath = "golang.org/x/mobile/bind/java",
    visibility = ["//visibility:public"],
    deps = [
        "@co_znly_rules_gomobile//gomobile/mobileinit:go_default_library",
    ],
)

go_library(
    name = "support_library",
    srcs = [
        "doc.go",
    ],
    data = glob(["*.java", "*.support"]) + [
        "seq_android.h",
    ],
    importpath = "golang.org/x/mobile/bind/java",
    visibility = ["//visibility:public"],
    deps = [
        "@co_znly_rules_gomobile//gomobile/mobileinit:go_default_library",
    ],
)
